# libsyslogpp

./: CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  configure  configure.ac
debian/: changelog  control
ebuild/: ChangeLog  Manifest  libsyslogpp-0.1.ebuild  libsyslogpp-0.2.ebuild  libsyslogpp-0.4.ebuild  libsyslogpp-9999.ebuild
examples/: Makefile  cerr.cpp  clog.cpp  loop.cpp  std.cpp  stream.cpp
src/: config.h.in  example.cpp  syslogpp.cpp  syslogpp.h  syslogpp_r.cpp
